# Copyright (c) 2022-2026, PostgreSQL Global Development Group

tests += {
  'name': 'recovery',
  'sd': meson.current_source_dir(),
  'bd': meson.current_build_dir(),
  'pytest': {
    'test_kwargs': {'priority': 40}, # recovery tests are slow, start early
    'tests': [
      'pyt/test_002_archiving.py',
      'pyt/test_005_replay_delay.py',
      'pyt/test_008_fsm_truncation.py',
      'pyt/test_009_twophase.py',
      'pyt/test_012_subtransactions.py',
      'pyt/test_013_crash_restart.py',
      'pyt/test_014_unlogged_reinit.py',
      'pyt/test_015_promotion_pages.py',
      'pyt/test_016_min_consistency.py',
      'pyt/test_020_archive_status.py',
      'pyt/test_021_row_visibility.py',
      'pyt/test_022_crash_temp_files.py',
      'pyt/test_029_stats_restart.py',
      'pyt/test_023_pitr_prepared_xact.py',
      'pyt/test_024_archive_recovery.py',
      'pyt/test_034_create_database.py',
      'pyt/test_041_checkpoint_at_promote.py',
      'pyt/test_045_archive_restartpoint.py',
    ],
  },
  'tap': {
    'test_kwargs': {'priority': 40}, # recovery tests are slow, start early
    'env': {
       'enable_injection_points': get_option('injection_points') ? 'yes' : 'no',
    },
    'tests': [
      't/001_stream_rep.pl',
      't/003_recovery_targets.pl',
      't/004_timeline_switch.pl',
      't/006_logical_decoding.pl',
      't/007_sync_rep.pl',
      't/010_logical_decoding_timelines.pl',
      't/017_shm.pl',
      't/018_wal_optimize.pl',
      't/019_replslot_limit.pl',
      't/025_stuck_on_old_timeline.pl',
      't/026_overwrite_contrecord.pl',
      't/027_stream_regress.pl',
      't/028_pitr_timelines.pl',
      't/030_stats_cleanup_replica.pl',
      't/031_recovery_conflict.pl',
      't/032_relfilenode_reuse.pl',
      't/033_replay_tsp_drops.pl',
      't/035_standby_logical_decoding.pl',
      't/036_truncated_dropped.pl',
      't/037_invalid_database.pl',
      't/038_save_logical_slots_shutdown.pl',
      't/039_end_of_wal.pl',
      't/040_standby_failover_slots_sync.pl',
      't/042_low_level_backup.pl',
      't/043_no_contrecord_switch.pl',
      't/044_invalidate_inactive_slots.pl',
      't/046_checkpoint_logical_slot.pl',
      't/047_checkpoint_physical_slot.pl',
      't/048_vacuum_horizon_floor.pl',
      't/049_wait_for_lsn.pl',
      't/050_redo_segment_missing.pl',
      't/051_effective_wal_level.pl',
      't/052_checkpoint_segment_missing.pl',
      't/053_standby_login_event_trigger.pl',
      't/054_unlogged_sequence_promotion.pl',
    ],
  },
}
