# Copyright (c) 2022-2026, PostgreSQL Global Development Group

tests += {
  'name': 'recovery',
  'sd': meson.current_source_dir(),
  'bd': meson.current_build_dir(),
  'pytest': {
    'test_kwargs': {'priority': 40}, # recovery tests are slow, start early
    'tests': [
      'pyt/test_002_archiving.py',
      'pyt/test_005_replay_delay.py',
      'pyt/test_007_sync_rep.py',
      'pyt/test_008_fsm_truncation.py',
      'pyt/test_009_twophase.py',
      'pyt/test_010_logical_decoding_timelines.py',
      'pyt/test_012_subtransactions.py',
      'pyt/test_013_crash_restart.py',
      'pyt/test_014_unlogged_reinit.py',
      'pyt/test_015_promotion_pages.py',
      'pyt/test_016_min_consistency.py',
      'pyt/test_018_wal_optimize.py',
      'pyt/test_019_replslot_limit.py',
      'pyt/test_020_archive_status.py',
      'pyt/test_021_row_visibility.py',
      'pyt/test_022_crash_temp_files.py',
      'pyt/test_025_stuck_on_old_timeline.py',
      'pyt/test_026_overwrite_contrecord.py',
      'pyt/test_028_pitr_timelines.py',
      'pyt/test_029_stats_restart.py',
      'pyt/test_023_pitr_prepared_xact.py',
      'pyt/test_024_archive_recovery.py',
      'pyt/test_030_stats_cleanup_replica.py',
      'pyt/test_031_recovery_conflict.py',
      'pyt/test_032_relfilenode_reuse.py',
      'pyt/test_033_replay_tsp_drops.py',
      'pyt/test_034_create_database.py',
      'pyt/test_036_truncated_dropped.py',
      'pyt/test_037_invalid_database.py',
      'pyt/test_038_save_logical_slots_shutdown.py',
      'pyt/test_039_end_of_wal.py',
      'pyt/test_041_checkpoint_at_promote.py',
      'pyt/test_042_low_level_backup.py',
      'pyt/test_043_no_contrecord_switch.py',
      'pyt/test_044_invalidate_inactive_slots.py',
      'pyt/test_045_archive_restartpoint.py',
      'pyt/test_046_checkpoint_logical_slot.py',
      'pyt/test_047_checkpoint_physical_slot.py',
      'pyt/test_048_vacuum_horizon_floor.py',
      'pyt/test_049_wait_for_lsn.py',
      'pyt/test_050_redo_segment_missing.py',
      'pyt/test_051_effective_wal_level.py',
      'pyt/test_052_checkpoint_segment_missing.py',
      'pyt/test_053_standby_login_event_trigger.py',
    ],
  },
  'tap': {
    'test_kwargs': {'priority': 40}, # recovery tests are slow, start early
    'env': {
       'enable_injection_points': get_option('injection_points') ? 'yes' : 'no',
    },
    'tests': [
      't/001_stream_rep.pl',
      't/003_recovery_targets.pl',
      't/004_timeline_switch.pl',
      't/006_logical_decoding.pl',
      't/017_shm.pl',
      't/027_stream_regress.pl',
      't/035_standby_logical_decoding.pl',
      't/040_standby_failover_slots_sync.pl',
      't/054_unlogged_sequence_promotion.pl',
    ],
  },
}
