# Copyright (c) 2022-2026, PostgreSQL Global Development Group

tests += {
  'name': 'ssl',
  'sd': meson.current_source_dir(),
  'bd': meson.current_build_dir(),
  'pytest': {
    'tests': [
      'pyt/test_001_ssltests.py',
      'pyt/test_002_scram.py',
      'pyt/test_003_sslinfo.py',
      'pyt/test_004_sni.py',
    ],
  },
}
