# Copyright (c) 2022-2026, PostgreSQL Global Development Group

tests += {
  'name': 'subscription',
  'sd': meson.current_source_dir(),
  'bd': meson.current_build_dir(),
  'pytest': {
    'tests': [
      'pyt/test_003_constraints.py',
      'pyt/test_004_sync.py',
      'pyt/test_005_encoding.py',
      'pyt/test_006_rewrite.py',
      'pyt/test_007_ddl.py',
      'pyt/test_008_diff_schema.py',
      'pyt/test_009_matviews.py',
      'pyt/test_010_truncate.py',
      'pyt/test_011_generated.py',
      'pyt/test_012_collation.py',
      'pyt/test_014_binary.py',
      'pyt/test_016_stream_subxact.py',
      'pyt/test_017_stream_ddl.py',
      'pyt/test_018_stream_subxact_abort.py',
      'pyt/test_019_stream_subxact_ddl_abort.py',
      'pyt/test_020_messages.py',
      'pyt/test_024_add_drop_pub.py',
      'pyt/test_025_rep_changes_for_schema.py',
      'pyt/test_033_run_as_table_owner.py',
      'pyt/test_034_temporal.py',
      'pyt/test_036_sequences.py',
      'pyt/test_037_except.py',
      'pyt/test_028_row_filter.py',
      'pyt/test_031_column_list.py',
      'pyt/test_032_subscribe_use_index.py',
      'pyt/test_026_stats.py',
      'pyt/test_030_origin.py',
    ],
  },
  'tap': {
    'env': {
      'with_icu': icu.found() ? 'yes' : 'no',
      'enable_injection_points': get_option('injection_points') ? 'yes' : 'no',
    },
    'tests': [
      't/001_rep_changes.pl',
      't/002_types.pl',
      't/013_partition.pl',
      't/015_stream.pl',
      't/021_twophase.pl',
      't/022_twophase_cascade.pl',
      't/023_twophase_stream.pl',
      't/027_nosuperuser.pl',
      't/029_on_error.pl',
      't/035_conflicts.pl',
      't/038_walsnd_shutdown_timeout.pl',
      't/100_bugs.pl',
    ],
  },
}
